# dream-game-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AppIconTemplate.xcf  font.fnt  fontClean.fnt  fontWorld.fnt
app/src/main/java/com/fireflame/dream/: DreamActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/src/: achievement_banner.cpp  achievement_banner.h  achievement_table.h  achievement_tracker.cpp  achievement_tracker.h  achievements_menu.cpp  achievements_menu.h  animation_controller.cpp  animation_controller.h  audio_engine.cpp  audio_engine.h  bmfont_table.h  color_tint.cpp  color_tint.h  detail_panel.cpp  detail_panel.h  dialog_panel.cpp  dialog_panel.h  dream_snippet_table.h  event_choice_panel.cpp  event_choice_panel.h  event_slot.cpp  event_slot.h  event_table.h  font_glyphs.h  game.cpp  game.h  game_board.cpp  game_board.h  gameplay_hud.cpp  gameplay_hud.h  hex_map.cpp  hex_map.h  hex_map_table.h  item.cpp  item.h  item_choice_panel.cpp  item_choice_panel.h  item_table.h  label.cpp  (+69 more)
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
